--- a/themes/maks/static/styles/prose.css
+++ b/themes/maks/static/styles/prose.css
@@ -56,6 +56,8 @@
   border-collapse: collapse;
   font-size: 12px;
   margin: 20px 0;
+  display: block;
+  overflow-x: auto;
 }
 .prose th {
   text-align: left;
